mp/Maneuver: Cleanup Java9+ deprecation of newInstance.